Get started on infographics section

--- a/roadtrip/src/styles/colors.scss
+++ b/roadtrip/src/styles/colors.scss
@@ -8,3 +8,10 @@ $maroon: #730d0d;
 $yellow: #d9dc1e;
 
 $transparentGray: rgba(233,233,233,.85);
+
+// Infographic colors
+$infoOrange: #E8900C;
+$infoTeal: #47D0EB;
+$infoGreen: #1BB5A5;
+$infoPurple: #9B5DB5;
+$infoYellow: #EBEA99;
