Got in POC for animating stuff in

--- a/roadtrip/src/styles/colors.scss
+++ b/roadtrip/src/styles/colors.scss
@@ -11,7 +11,9 @@ $transparentGray: rgba(233,233,233,.85);
 
 // Infographic colors
 $infoOrange: #E8900C;
-$infoTeal: #47D0EB;
+$infoTeal: #7BD6EB;
 $infoGreen: #1BB5A5;
 $infoPurple: #9B5DB5;
 $infoYellow: #EBEA99;
+$infoRed: #E85548;
+$infoBrown: #826A5C;
