Breakfast burrito block!

--- a/roadtrip/src/styles/colors.scss
+++ b/roadtrip/src/styles/colors.scss
@@ -15,6 +15,6 @@ $infoOrange: #E8900C;
 $infoTeal: #7BD6EB;
 $infoGreen: #1BB5A5;
 $infoPurple: #9B5DB5;
-$infoYellow: #EBEA99;
+$infoYellow: #e6ca04;
 $infoRed: #E85548;
 $infoBrown: #826A5C;
