--- a/roadtrip/bison/src/App.less
+++ b/roadtrip/bison/src/App.less
@@ -62,6 +62,7 @@
 
 .game-menu {
   height: 33.33vh; // 1/3 of screen
+  width: 100vw;
   background-color: @nps-brown;
   display: flex;
   flex-direction: column;
@@ -120,7 +121,7 @@
 }
 
 .loading-spinner {
-  font-size: 60px;
+  font-size: 10rem;
   animation: spin 2s linear infinite;
 }
 
