--- a/roadtrip/bison/src/App.less
+++ b/roadtrip/bison/src/App.less
@@ -13,8 +13,8 @@
 .app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  max-height: 100vh;
+  min-height: 100dvh;
+  max-height: 100dvh;
   overflow: hidden;
   padding: 0;
   margin: 0;
@@ -45,13 +45,13 @@
   flex-direction: column;
   width: 100%;
   max-width: 414px; // iPhone Pro Max width - mobile constraint for desktop
-  height: 100vh;
+  height: 100dvh;
   margin: 0 auto; // Center on desktop
   box-sizing: border-box;
 }
 
 .image-section {
-  height: 66.67vh; // 2/3 of screen
+  height: 66.67dvh; // 2/3 of screen
   display: flex;
   justify-content: center;
   align-items: center;
@@ -108,7 +108,7 @@
 }
 
 .game-menu {
-  height: 33.33vh; // 1/3 of screen
+  height: 33.33dvh; // 1/3 of screen
   width: 100vw;
   background-color: @nps-brown;
   display: flex;
@@ -170,7 +170,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: @background-gray;
 }
 
@@ -183,7 +183,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: @background-gray;
 }
 
@@ -224,7 +224,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: @background-gray;
 }
 
