stuff on desktop

--- a/roadtrip/bison/src/App.less
+++ b/roadtrip/bison/src/App.less
@@ -110,6 +110,7 @@
 .game-menu {
   height: 33.33dvh; // 1/3 of screen
   width: 100vw;
+  max-width: 414px; // iPhone Pro Max width - mobile constraint for desktop
   background-color: @nps-brown;
   display: flex;
   flex-direction: column;
