--- a/roadtrip/bison/src/Menu.module.less
+++ b/roadtrip/bison/src/Menu.module.less
@@ -39,9 +39,7 @@
 
 .logoBackground {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+  height: 100dvh;
   opacity: 1;
 }
 
